[gd_scene load_steps=10 format=3 uid="uid://c4gh4g7f5n66w"]

[ext_resource type="Script" path="res://Scenes/tutorialhud.gd" id="1_iky4k"]
[ext_resource type="FontFile" uid="uid://d1eukkbercapc" path="res://Fonts/Drowsy-8mA2.ttf" id="2_l2std"]
[ext_resource type="Texture2D" uid="uid://3rvukqcsmjda" path="res://Sprites/pngegg (14).png" id="2_ra2kr"]

[sub_resource type="ViewportTexture" id="ViewportTexture_k8f1l"]

[sub_resource type="LabelSettings" id="LabelSettings_rjqk6"]
font = ExtResource("2_l2std")
font_color = Color(0, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_5huvw"]
font = ExtResource("2_l2std")
font_color = Color(0, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_k73h6"]
font = ExtResource("2_l2std")
font_color = Color(0, 0, 0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_i8krt"]
bg_color = Color(0.970779, 0.920912, 0.922571, 1)
corner_radius_top_left = 12
corner_radius_top_right = 12
corner_radius_bottom_right = 12
corner_radius_bottom_left = 12

[sub_resource type="LabelSettings" id="LabelSettings_b3gaa"]
font = ExtResource("2_l2std")
font_size = 100
font_color = Color(0, 0, 0, 1)

[node name="TUTORIALHUD" type="CanvasLayer"]
process_mode = 3
script = ExtResource("1_iky4k")

[node name="Button" type="Button" parent="."]
unique_name_in_owner = true
anchors_preset = -1
anchor_left = 0.458854
anchor_top = 0.473148
anchor_right = 0.533854
anchor_bottom = 0.532407
offset_left = -27.0
offset_top = -196.0
offset_right = -27.0
offset_bottom = -196.0
grow_horizontal = 2
grow_vertical = 2
text = "Next"
icon = SubResource("ViewportTexture_k8f1l")
metadata/_edit_use_anchors_ = true

[node name="JumpButton" type="Button" parent="."]
unique_name_in_owner = true
visible = false
offset_left = 812.0
offset_top = 633.0
offset_right = 1063.0
offset_bottom = 703.0
icon = SubResource("ViewportTexture_k8f1l")
flat = true

[node name="BrakeButton" type="Button" parent="."]
unique_name_in_owner = true
visible = false
offset_left = 1053.0
offset_top = 505.0
offset_right = 1154.0
offset_bottom = 704.0
icon = SubResource("ViewportTexture_k8f1l")
flat = true

[node name="AccelButton" type="Button" parent="."]
unique_name_in_owner = true
visible = false
offset_left = 708.0
offset_top = 492.0
offset_right = 811.0
offset_bottom = 701.0
icon = SubResource("ViewportTexture_k8f1l")
flat = true

[node name="Acceltxt" type="Label" parent="."]
unique_name_in_owner = true
visible = false
offset_left = 414.0
offset_top = 649.0
offset_right = 632.0
offset_bottom = 689.0
text = "PRESS HERE TO ACCELERATE"
label_settings = SubResource("LabelSettings_rjqk6")

[node name="Jumptxt" type="Label" parent="."]
unique_name_in_owner = true
visible = false
offset_left = 990.0
offset_top = 880.0
offset_right = 1263.0
offset_bottom = 957.0
text = "PRESS HERE TO JUMP"
label_settings = SubResource("LabelSettings_5huvw")

[node name="Braketxt" type="Label" parent="."]
unique_name_in_owner = true
visible = false
offset_left = 1229.0
offset_top = 667.0
offset_right = 1401.0
offset_bottom = 875.0
text = "PRESS HERE TO BRAKE"
label_settings = SubResource("LabelSettings_k73h6")

[node name="AccelArrow" type="Sprite2D" parent="."]
unique_name_in_owner = true
visible = false
position = Vector2(630, 591)
rotation = 5.23599
scale = Vector2(0.0972669, 0.0972669)
texture = ExtResource("2_ra2kr")
flip_h = true

[node name="BrakeArrow" type="Sprite2D" parent="."]
unique_name_in_owner = true
visible = false
position = Vector2(1218, 594)
rotation = 7.67162
scale = Vector2(0.0972669, 0.0972669)
texture = ExtResource("2_ra2kr")

[node name="JumpArrow" type="Sprite2D" parent="."]
unique_name_in_owner = true
visible = false
position = Vector2(928, 788)
rotation = 3.49162
scale = Vector2(0.0972669, 0.0972669)
texture = ExtResource("2_ra2kr")
flip_h = true

[node name="JumpHgl" type="Label" parent="."]
unique_name_in_owner = true
visible = false
modulate = Color(0, 0, 0, 0.65098)
offset_left = 797.0
offset_top = 576.0
offset_right = 1073.0
offset_bottom = 654.0
theme_override_styles/normal = SubResource("StyleBoxFlat_i8krt")

[node name="BrakeHgl" type="Label" parent="."]
unique_name_in_owner = true
visible = false
modulate = Color(0, 0, 0, 0.65098)
offset_left = 1145.0
offset_top = 441.0
offset_right = 1354.0
offset_bottom = 545.0
rotation = 1.5708
theme_override_styles/normal = SubResource("StyleBoxFlat_i8krt")

[node name="AccelHgl" type="Label" parent="."]
unique_name_in_owner = true
visible = false
modulate = Color(0, 0, 0, 0.65098)
offset_left = 753.0
offset_top = 654.0
offset_right = 965.0
offset_bottom = 753.0
rotation = -1.5708
theme_override_styles/normal = SubResource("StyleBoxFlat_i8krt")

[node name="Label" type="Label" parent="."]
unique_name_in_owner = true
visible = false
offset_left = 351.0
offset_top = 252.0
offset_right = 1912.0
offset_bottom = 548.0
scale = Vector2(0.76, 0.76)
text = "Avoid the beds and reach the school!"
label_settings = SubResource("LabelSettings_b3gaa")

[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
[connection signal="pressed" from="JumpButton" to="." method="_on_button_pressed"]
[connection signal="pressed" from="BrakeButton" to="." method="_on_button_pressed"]
[connection signal="pressed" from="AccelButton" to="." method="_on_button_pressed"]
